Fixed spacing in path-nav

--- a/frontend/src/shared/framework/components/controls/navigation/path-nav/path-nav.scss
+++ b/frontend/src/shared/framework/components/controls/navigation/path-nav/path-nav.scss
@@ -12,24 +12,32 @@ path-nav
         display: block;
         white-space: nowrap;
 
-        &:not(:last-child)::after
+        &:not(:last-child)
         {
-            content: "-";
-            display: inline-block;
-            width: 2.5em;
-            opacity: 0.3;
-            background: var(--surface-neutral-icon-color);
-            color: transparent;
-            mask-size: 0.75em;
-            mask-position: center 57%;
-            mask-repeat: no-repeat;
+            position: relative;
+            padding-right: 2.5em;
 
-            mask-image: url(
-                "data:image/svg+xml;utf8," +
-                "<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>" +
-                    "<path d='M11.67 3.87L9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z' transform='rotate(180 12 12) translate(5)'/>" +
-                "</svg>"
-            );
+            &::after
+            {
+                content: "-";
+
+                position: absolute;
+                right: 0;
+                width: 2.5em;
+                opacity: 0.3;
+                background: var(--surface-neutral-icon-color);
+                color: transparent;
+                mask-size: 0.75em;
+                mask-position: center 57%;
+                mask-repeat: no-repeat;
+
+                mask-image: url(
+                    "data:image/svg+xml;utf8," +
+                    "<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>" +
+                        "<path d='M11.67 3.87L9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z' transform='rotate(180 12 12) translate(5)'/>" +
+                    "</svg>"
+                );
+            }
         }
     }
 }
